# faer

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  perf_todo.txt
benchmark/: CMakeLists.txt
benchmark/src/: common.hpp  common_small.hpp  matmul_large.cpp  matrix_mul_large.cpp  matrix_mul_small_cc.cpp  matrix_mul_small_cr.cpp  matrix_mul_small_rc.cpp  matrix_mul_small_rr.cpp  matvec_large.cpp
docs/: CMakeLists.txt  conf.py  index.rst
include/faer/: span.hpp
include/faer/dev/: expr.hpp  noisy.hpp
include/faer/internal/: assign.hpp  cache.hpp  enums.hpp  epilogue.hpp  helpers.hpp  mat_mul_real.hpp  mat_mul_small.hpp  matmul_kernels.hpp  matmul_large.hpp  matvec_large.hpp  pack_operands.hpp  prologue.hpp  simd.hpp  simd_clang_avx2_fma.hpp  simd_macros.hpp
include/faer/internal/expr/: add.hpp  broadcast.hpp  cast.hpp  core.hpp  cursor.hpp  eval.hpp  mul.hpp  reader.hpp
include/faer/ops/: cwise_arithmetic.hpp
include/faer/traits/: core.hpp
src/: cache.cpp  matmul.cpp  query_cache.cpp  query_cache.hpp
test/: CMakeLists.txt
test/src/: linear_expr.cpp  matrix_mul.cpp
